--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -10,13 +10,11 @@
         android:id="@+id/fragment_text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/workout_title"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <TextView
-        android:id="@+id/fragment_text_details"
+        android:id="@+id/fragment_text_description"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/workout_description"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
