--- a/app/src/main/res/layout/activity_temp.xml
+++ b/app/src/main/res/layout/activity_temp.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/stopwatch_container"
+    android:name="com.marat.bolatov.simplefragmentuseapp.fragments.StopwatchFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/stopwatch_fragment"
-        android:name="com.marat.bolatov.simplefragmentuseapp.fragments.StopwatchFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"/>
